--- a/My_pyNbody_Project.ipynb
+++ b/My_pyNbody_Project.ipynb
@@ -67,25 +67,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "24GC5vu0mk6-",
-        "outputId": "00278d96-2eba-4845-f090-a37e007eec20"
+        "id": "24GC5vu0mk6-"
       },
       "source": [
-        "!mv ./drive/MyDrive/testdata ./\n"
+        "!cp -r ./drive/MyDrive/testdata ./\n"
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mv: cannot stat './drive/MyDrive/testdata': No such file or directory\n"
-          ]
-        }
-      ]
+      "execution_count": 54,
+      "outputs": []
     },
     {
       "cell_type": "code",
