--- a/My_pyNbody_Project.ipynb
+++ b/My_pyNbody_Project.ipynb
@@ -108,7 +108,7 @@
         "outputId": "664f5e5d-7cb2-42d4-cbfa-d72ccef83c2b"
       },
       "source": [
-        "pip install pynbody"
+        "pip install git+git://github.com/pynbody/pynbody.git"
       ],
       "execution_count": 4,
       "outputs": [
